Changelog
=========

1.2.7 - unreleased
------------------


1.2.6 - 2010-03-01
------------------

- Make icon descriptions' lookup of portal_type title less brittle for
  missing portal_types (fall back to the portal_type id).
  [davisagli]

- Do not let the homelink in the personal bar viewlet point to the
  author page but to the personalize_form (or dashboard).
  Fixes http://dev.plone.org/plone/ticket/8707
  [maurits]

- XHTML minor fixes to be also XHTML Strict compliant.
  http://dev.plone.org/plone/ticket/4379
  [keul]

- Fixed time_only argument of comments viewlet. Fixes #9467
  [naro]

- Fixed document_byline so it will display copyrights
  when Allow anyone to view 'about' information is turned off
  This fix http://dev.plone.org/plone/ticket/9344
  [amleczko]

1.2.5 - 2009-08-01
------------------

- In the history viewlet, moved again the arrows inside a span. This is 
  needed to allow CSS style.
  [vincentfretin]

1.2.4 - 2009-07-04
------------------

- In the history viewlet, internationalized the Compare link and replaced
  icons by plain text. The revert link is now a POST button. This closes
  http://dev.plone.org/plone/ticket/9064
  [limi, vincentfretin]

1.2.3 - 2009-06-12
------------------

- Fix issue when dealing with empty version histories in history viewlet.
  [alecm]

1.2.2 - 2009-06-11
------------------

- Make ContentHistoryViewlet use new metadata only history method to
  speed up listing.
  [alecm]

- Make ContentHistoryViewlet check if context isVersionable.
  [elro]

1.2.1 - 2009-05-20
------------------

- Changed the search and author header links to respect the navigation root.
  [hannosch]

1.2 - May 16, 2009
------------------

- Filter not-interesting history entries in content history viewlet. This
  prevents an empty history viewlet from being shown.
  [wichert]

- Add a new content history viewlet which combines the full workflow history
  and content versions. Render this instead of the workflow history viewlet.